:bug: Fix the block library squishing on small contents

--- a/src/styl/tags/shared/scriptables/catnip-editor.styl
+++ b/src/styl/tags/shared/scriptables/catnip-editor.styl
@@ -17,7 +17,7 @@ catnip-editor
             margin-top 0
     &.flexrow > .flexfix
         width 24rem
-        flex 0 1 auto
+        flex 0 0 auto
     .&-aTrashZone
         color error
         border 1px solid error
